--- a/fart_api_crm/app/templates/invoices/create.html
+++ b/fart_api_crm/app/templates/invoices/create.html
@@ -97,7 +97,7 @@
         <div>Итого с НДС: <strong id="total-with">0.00</strong></div>
     </div>
 
-    <button class="btn success" type="submit">Сохранить</button>
+    <button class="btn" type="submit">Сохранить</button>
 </form>
 
 <script>
